k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: opa-policy
  labels:
    name: opa-policy
