k8s/nodeport-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: opa-nodeport
  namespace: opa
  labels:
    app: opa-server
spec:
  type: NodePort
  ports:
  - port: 8181
    targetPort: 8181
    nodePort: 30081
    protocol: TCP
    name: http
  selector:
    app: opa-server
    app.kubernetes.io/name: opa-policy
    app.kubernetes.io/instance: opa-policy
